fix flickering icon when opening the dropdown

--- a/src/components/dropdown/_dropdown-uplift.scss
+++ b/src/components/dropdown/_dropdown-uplift.scss
@@ -54,6 +54,7 @@ div.multiselect {
   div.multiselect {
     > .listoption-icon {
       top: 12px;
+      left: 12px;
     }
   }
 
